增加自定义波动View

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,10 @@
             android:layout_height="145px"
             android:background="@drawable/bg_curve"
             android:layout_marginTop="30px">
+            <com.tools.speedhelper.widget.SineWave
+                android:id="@+id/speed_wave_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </com.base.lib.autolayout.AutoFrameLayout>
         <com.base.lib.autolayout.AutoRelativeLayout
             android:layout_width="wrap_content"
