--- a/speedlib/src/main/res/values/attrs.xml
+++ b/speedlib/src/main/res/values/attrs.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <attr name="sv_speedometerColor" format="color"/>
     <attr name="sv_speedometerBackColor" format="color"/>
     <attr name="sv_centerCircleColor" format="color" />
-
     <attr name="sv_speedBackgroundColor" format="color" />
     <attr name="sv_withEffects" format="boolean" />
-
     <attr name="sv_orientation" format="enum" >
         <enum name="HORIZONTAL" value="0" />
         <enum name="VERTICAL" value="1" />
     </attr>
-
     <attr name="sv_image" format="reference" />
-
     <declare-styleable name="Gauge">
         <attr name="sv_textColor" format="color" />
         <attr name="sv_speedTextColor" format="color"/>
@@ -23,23 +18,18 @@
         <attr name="sv_speedTextSize" format="dimension" />
         <attr name="sv_textSize" format="dimension" />
         <attr name="sv_unit" format="string" />
-
         <attr name="sv_unitTextSize" format="dimension"/>
         <attr name="sv_trembleDegree" format="float" />
         <attr name="sv_trembleDuration" format="integer" />
         <attr name="sv_lowSpeedPercent" format="integer" />
         <attr name="sv_mediumSpeedPercent" format="integer" />
         <attr name="sv_textRightToLeft" format="boolean" />
-
         <attr name="sv_minSpeed" format="integer" />
         <attr name="sv_maxSpeed" format="integer" />
-
         <attr name="sv_accelerate" format="float" />
         <attr name="sv_decelerate" format="float" />
-
         <attr name="sv_speedTextTypeface" format="string" />
         <attr name="sv_textTypeface" format="string" />
-
         <attr name="sv_speedTextPosition" format="enum" >
             <enum name="TOP_LEFT" value="0" />
             <enum name="TOP_CENTER" value="1" />
@@ -58,9 +48,7 @@
             <enum name="INTEGER" value="0" />
             <enum name="FLOAT" value="1" />
         </attr>
-
     </declare-styleable>
-
     <declare-styleable name="Speedometer"  parent="Gauge">
         <attr name="sv_indicatorColor" format="color" />
         <attr name="sv_markColor" format="color" />
@@ -100,22 +88,18 @@
 
         <attr name="sv_cutPadding" format="dimension" />
     </declare-styleable>
-
     <declare-styleable name="SpeedView" parent="Speedometer">
         <attr name="sv_centerCircleColor" />
     </declare-styleable>
-
     <declare-styleable name="DeluxeSpeedView" parent="Speedometer">
         <attr name="sv_centerCircleColor" />
         <attr name="sv_speedBackgroundColor" />
         <attr name="sv_withEffects" />
     </declare-styleable>
-
     <declare-styleable name="AwesomeSpeedView" parent="Speedometer">
         <attr name="sv_speedometerColor" />
         <attr name="sv_trianglesColor" format="color"/>
     </declare-styleable>
-
     <declare-styleable name="RaySpeedometer" parent="Speedometer">
         <attr name="sv_speedBackgroundColor" />
         <attr name="sv_withEffects" />
@@ -123,31 +107,28 @@
         <attr name="sv_degreeBetweenMark" format="integer"/>
         <attr name="sv_markWidth" format="dimension"/>
     </declare-styleable>
-
     <declare-styleable name="PointerSpeedView" parent="Speedometer">
         <attr name="sv_centerCircleColor" />
         <attr name="sv_speedometerColor" />
         <attr name="sv_pointerColor" format="color"/>
     </declare-styleable>
-
     <declare-styleable name="TubeSpeedometer" parent="Speedometer">
         <attr name="sv_speedometerBackColor" />
         <attr name="sv_withEffects3D" format="boolean" />
     </declare-styleable>
-
     <declare-styleable name="ImageSpeedometer" parent="Speedometer">
         <attr name="sv_image" />
     </declare-styleable>
-
     <declare-styleable name="LinearGauge" parent="Gauge">
         <attr name="sv_orientation" />
         <attr name="sv_speedometerColor" />
         <attr name="sv_speedometerBackColor" />
     </declare-styleable>
-
     <declare-styleable name="ImageLinearGauge" parent="LinearGauge">
         <attr name="sv_speedometerBackColor" />
         <attr name="sv_image" />
     </declare-styleable>
-
+    <declare-styleable name="WaveView">
+        <attr name="sw_wave_color" format="color"/>
+    </declare-styleable>
 </resources>
